--- a/NWO/localisation/russian.csv
+++ b/NWO/localisation/russian.csv
@@ -1,6 +1,6 @@
 PROVINCEVIEW_CORES2;Нац. пров.:;X
 Select;Выбрать;X
-BUY;Покупать;X
+BUY;Бурятия;X
 SELL;Продавать;X
 Maneuver;Маневренность;X
 AUTOSAVING;Идет сохранение;X
