--- a/NWO/localisation/text.csv
+++ b/NWO/localisation/text.csv
@@ -429,26 +429,26 @@ OOS_DESC;Игра не синхронизирована!;X;
 ##############################################################;;X;
 army_base;Армии;X;
 navy_base;Флоты;X;
-infantry;Пехота;X;
-cavalry;Кавалерия;X;
-cuirassier;Кирасиры;X;
-dragoon;Драгуны;X;
+infantry;Контрактники;X;
+cavalry;Самолеты;X;
+cuirassier;Вертолеты;X;
+dragoon;Безпилотник;X;
 engineer;Инженеры;X;
-guard;Гвардейцы;X;
-hussar;Гусары;X;
-irregular;Иррегуляры;X;
-artillery;Артиллерия;X;
-tank;Танки;X;
-plane;Самолет;X;
-commerce_raider;Рейдер;X;
+guard;Противотанковые;X;
+hussar;Балистическая ракета;X;
+irregular;Призывники;X;
+artillery;Танки;X;
+tank;Дроны;X;
+plane;Ракеты;X;
+commerce_raider;Фрегат;X;
 cruiser;Крейсер;X;
-frigate;Фрегат;X;
-manowar;Парусный линкор;X;
-ironclad;Броненосец;X;
-dreadnought;Дредноут;X;
-clipper_transport;Клиперы;X;
-steam_transport;Транспортные пароходы;X;
-monitor;Монитор;X;
+frigate;Патрульный;X;
+manowar;Корвет;X;
+ironclad;Эсминец;X;
+dreadnought;Экскортный авианосец;X;
+clipper_transport;Десантный;X;
+steam_transport;УДК;X;
+monitor;Подлодка;X;
 #;;X;
 army_base_short;(А);X;
 navy_base_short;(Ф);X;
@@ -987,7 +987,7 @@ TIB;Тибет;X;
 SIA;Сиам;X;
 CAM;Камбоджа;X;
 BUR;Бирма;X;
-DAI;Дайнам;X;
+DAI;Вьетнам;X;
 BRU;Бруней;X;
 BAL;Бали;X;
 JOH;Джохор;X;
@@ -1498,21 +1498,21 @@ ENG_fascist_dictatorship_ADJ;Британск.;X;
 ##################################################;;X;
 # Rebels;;X;
 ##################################################;;X;
-fascist_rebels_title;Фашисты;X;
-fascist_rebels_name;$COUNTRY$ фашисты;X;
+fascist_rebels_title;Исламисты;X;
+fascist_rebels_name;$COUNTRY$ исламисты;X;
 fascist_rebels_desc;Фрайкоры состоят из революционеров, исповедующих радикальную новую идеологию - фашизм. Эти боевики-революционеры, приверженцы насилия и массовых акций, не остановятся ни перед чем, чтобы свергнуть старые монархии и юные демократии и заменить их Левиафаном фашистского государства.;X;
 fascist_rebels_army;$COUNTRY_ADJ$ бригада фрайкора;X;
 communist_rebels_title;Коммунисты;X;
 communist_rebels_name;$COUNTRY$ коммунисты;X;
 communist_rebels_desc;Красная гвардия состоит из коммунистов, поднявших открытое восстание против правительства и, что еще важнее, против всего, что они считают реакционными признаками буржуазного государства и даже общества в целом. Вместо институтов религии, традиций, частной собственности и семьи эти революционеры стремятся установить диктатуру пролетариата: первый шаг на долгом и усеянном трупами пути к обещанной бесклассовой Утопии.;X;
 communist_rebels_army;$COUNTRY_ADJ$ красная гвардия;X;
-anarcho_liberal_rebels_title;Либертарианцы;X;
-anarcho_liberal_rebels_name;$COUNTRY$ либертарианцы;X;
+anarcho_liberal_rebels_title;Прогрессивисты;X;
+anarcho_liberal_rebels_name;$COUNTRY$ прогрессевисты;X;
 anarcho_liberal_rebels_desc;Гражданское ополчение состоит из либералов, поднявших восстание против реального или кажущегося притеснения граждан правительством и государственным аппаратом, чтобы защитить свою личную свободу любой ценой. Борясь с тиранией государства, эти революционеры считают себя борцами за свободу в истинном смысле этого слова.;X;
 anarcho_liberal_rebels_army;$COUNTRY_ADJ$ городская гвардия;X;
-reactionary_rebels_title;Реакционеры;X;
-reactionary_rebels_name;$COUNTRY$ реакционеры;X;
-reactionary_rebels_desc;Повстанцы-реакционеры страстно желают возвращения старых добрых времен. Это могут быть закоренелые монархисты или, по их словам, просто противники современных идей. Эти контрреволюционеры всегда находятся на переднем крае борьбы с социализмом и либерализмом.;X;
+reactionary_rebels_title;Популисты;X;
+reactionary_rebels_name;$COUNTRY$ популисты;X;
+reactionary_rebels_desc;Повстанцы-популисты страстно желают возвращения старых добрых времен. Это могут быть закоренелые монархисты или, по их словам, просто противники современных идей. Эти контрреволюционеры всегда находятся на переднем крае борьбы с социализмом и либерализмом.;X;
 reactionary_rebels_army;$COUNTRY_ADJ$ белая армия;X;
 pan_nationalist_rebels_title;Пан-националисты;X;
 pan_nationalist_rebels_name;$UNION_ADJ$ пан-националисты;X;
@@ -10977,11 +10977,11 @@ PROV1026;Пермь;X;
 PROV1027;Ветлуга;X;
 PROV1028;Вятка;X;
 PROV1029;Глазов;X;
-PROV1030;Казань;X;
+PROV1030;Йошкар-Ола;X;
 PROV1031;Сарапул;X;
-PROV1032;Чистополь;X;
+PROV1032;Казань;X;
 PROV1033;Симбирск;X;
-PROV1034;Самара;X;
+PROV1034;Альметьеск;X;
 PROV1035;Сызрань;X;
 PROV1036;Астрахань;X;
 PROV1037;Саратов;X;
@@ -10990,7 +10990,7 @@ PROV1039;Царицын;X;
 PROV1040;Заревка;X;
 PROV1041;Элиста;X;
 PROV1042;Уфа;X;
-PROV1043;Бузулук;X;
+PROV1043;Самара;X;
 PROV1044;Оренбург;X;
 PROV1045;Мигулинская;X;
 PROV1046;Чирская;X;
@@ -18264,7 +18264,7 @@ TECH_DAILY_RESEARCHPOINTS_TOTAL_TOOLTIP;Ежедневные очки исследования: §G+$VALUE$
 TECH_DAILY_RESEARCHPOINTS_TOOLTIP;$POPTYPE$ обеспечивают нам §G$VALUE$§W очков исследования\n(они составляют §Y$FRACTION$%§W населения при оптимальных $OPTIMAL$%).;X;
 average_literacy;Грамотность;X;
 MODIFIER_RESEARCH_POINTS;Очки исследования;X;
-gas;Газовая атака;X;
+gas;Газ;X;
 COMBAT_GAS;Газовые атаки против врага, не обладающего средства защиты от них, могут быть просто разгромными.;X;
 MAY_GAS_ATTACK;Можно устраивать газовые атаки\n;X;
 MAY_GAS_DEFEND;Можно защищаться от газовых атак\n;X;
@@ -19535,7 +19535,7 @@ NAVAL_SORT_LABEL;Сортировать по:;x;
 NAVAL_SORT_TYPE;Тип;x;
 NAVAL_SORT_STANCE;Позиция;x;
 NAVAL_SORT_STR_ORG;Организация;x;
-battleship;Линкор;x;
+battleship;Авианосец;x;
 UNCOLONIZED_WITHDRAW;Отступить;x;
 UNCOLONIZED_INVEST_LVL1;Экспедиция;x;
 UNCOLONIZED_INVEST_LVL2;Колонисты;x;
